--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CombatManager.cs" />
     <Compile Include="CursorController.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
