--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CursorController.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="HUD.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
