--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -47,12 +47,15 @@
     <Compile Include="CombatManager.cs" />
     <Compile Include="CursorController.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="EnemyManager.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeaSerpent.cs" />
+    <Compile Include="Slime.cs" />
     <Compile Include="TestBed.cs" />
   </ItemGroup>
   <ItemGroup>
