--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -61,5 +61,13 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Maps_and_Overlays\HudBorders.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Maps_and_Overlays\OverworldMap_01.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
