--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -57,6 +57,7 @@
     <Compile Include="SeaSerpent.cs" />
     <Compile Include="Slime.cs" />
     <Compile Include="TestBed.cs" />
+    <Compile Include="Wyvern.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
