--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -50,6 +50,7 @@
     <Compile Include="EnemyManager.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="HUD.cs" />
+    <Compile Include="ItemManager.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
