Added Global Class; combat manager bugwork

--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Enemy.cs" />
     <Compile Include="EnemyManager.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="ItemManager.cs" />
     <Compile Include="Map.cs" />
