--- a/IslandsOfDiscoveryTxtRPG.csproj
+++ b/IslandsOfDiscoveryTxtRPG.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quest.cs" />
+    <Compile Include="QuestManager.cs" />
     <Compile Include="SeaSerpent.cs" />
     <Compile Include="Slime.cs" />
     <Compile Include="TestBed.cs" />
